<resources>
    <string name="app_name">FoodWasteTool</string>
    <string name="welcome">Welcome.</string>
    <string name="WTAMU_food_waste">WTAMU Food Waste Tool</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="food_waste_registration">Food Waste Registration</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="full_name">Full Name</string>
    <string name="BuffId">Buff ID</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="VerifyPassword">Verify Password</string>
    <string name="register">Register</string>
    <string name="Already_registered">Already Registered? Login Here</string>
    <string name="not_registered">Not Registered? Register Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Forgot_instructions">Please enter your email address to send a reset link</string>
    <string name="logout">Logout</string>
    <string name="send_link">Send Link</string>
    <string name="go_back">Go Back</string>
    <string name="hello">Hello.</string>
    <string name="like_to_do">What would you like to do?</string>
    <string name="open_camera">Open Camera</string>
    <string name="view_data">View Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="collect_data">Collect Data</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_buff_id">Change Buff ID</string>
    <string name="change_password">Change Password</string>
    <string name="your_name">Name</string>
    <string name="your_profile">Your Profile</string>
    <string name="update_name">Update Name</string>
    <string name="enter_new_name">Please enter your new name.</string>
    <string name="update">Update</string>
    <string name="update_id">Update Buff ID</string>
    <string name="enter_new_id">Please enter a new Buff ID</string>
    <string name="update_email">Update Email</string>
    <string name="enter_new_email">Please enter your new email.</string>
</resources>
