<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="28dp"
        android:fontFamily="monospace"
        android:text="@string/your_profile"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="210dp"
        android:layout_height="28dp"
        android:text="@string/your_name"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/email"
        android:layout_width="210dp"
        android:layout_height="26dp"
        android:text="@string/email"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/buffID"
        android:layout_width="210dp"
        android:layout_height="28dp"
        android:text="@string/BuffId"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/changeNameButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:elevation="0dp"
        android:text="@string/change_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buffID"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/changeEmailButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:elevation="0dp"
        android:text="@string/change_email"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeNameButton"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/changeBuffIDButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:elevation="0dp"
        android:text="@string/change_buff_id"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeEmailButton"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:elevation="0dp"
        android:text="@string/change_password"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeBuffIDButton"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:elevation="0dp"
        android:text="@string/go_back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="58dp"
        android:layout_height="28dp"
        android:text="@string/your_name"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fullName"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="58dp"
        android:layout_height="28dp"
        android:text="@string/email"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="58dp"
        android:layout_height="28dp"
        android:text="@string/BuffId"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buffID"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.023" />
</androidx.constraintlayout.widget.ConstraintLayout>