<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ForgotPassActivity">

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="241dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text="@string/Forgot_instructions"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <EditText
        android:id="@+id/email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHint="#ffffff"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/sendLinkButton"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="48dp"
        android:text="@string/send_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:text="@string/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.676"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>